--- a/src/main/resources/assets/naturalpledge/lang/en_us.lang
+++ b/src/main/resources/assets/naturalpledge/lang/en_us.lang
@@ -481,7 +481,7 @@ naturalpledge.page.idunn_spells1=The second and final spell of &3Idunn&0, &1Life
 
 naturalpledge.entry.garb_idunn=Priestly Fashion - Idunn
 naturalpledge.tagline.garb_idunn=Head on or backstab
-naturalpledge.page.garb_idunn0=No priest would be caught dead without a ceremonial robe, although robes aren't actually required to pay allegiance to a divinity.<br>These robes, beyond being fashionable, provide a tangible benefit. Idunn's robes protect their wearer from attacks to the side, making all combat head on.
+naturalpledge.page.garb_idunn0=No priest would be caught dead without a ceremonial robe, although robes aren't actually required to pay allegiance to a divinity.<br>These robes, beyond being fashionable, provide a tangible benefit. Idunn's robes protect their wearer from attacks to the side, making all viable combat head on.
 naturalpledge.page.garb_idunn1=Bring it on! I &olive&0 for this!
 
 naturalpledge.entry.thor=Faith in Thor
